# TravellingSalesmanProblemOptimiser

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  docker-compose.yaml  main.cc  run.sh
backend/: CMakeLists.txt  main.cc
backend/includes/algorithms/: GeneticAlgorithm.hpp  PopulationGenerator.hpp  cross_over_operator.hpp  genetic_algorithm.hpp  selector.hpp
backend/includes/data/: coordinate.hpp  individual.hpp  population.hpp
backend/includes/manager/: IndividualManager.hpp  individual_manager.hpp
backend/src/algorithms/: GeneticAlgorithm.cc  PopulationGenerator.cc  cross_over_operator.cc  genetic_algorithm.cc  population_generator.cc  selector.cc
backend/src/data/: individual.cc  population.cc
backend/src/manager/: IndividualManager.cc  individual_manager.cc
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: TSPOptimizer.py  request_pb2.py  request_pb2.pyi  request_pb2_grpc.py  requirements.txt  tsp_optimizer.py
frontend/communication/: Communicator.py  communicator.py
frontend/display/: MainWindow.py  main_window.py
includes/: selector.hpp
includes/algorithms/: GeneticAlgorithm.hpp  PopulationGenerator.hpp  cross_over_operator.hpp  selector.hpp
includes/data/: coordinate.hpp  individual.hpp  population.hpp
includes/manager/: IndividualManager.hpp  MutationManager.hpp  PopulationManager.hpp
messages/: request.proto
src/algorithms/: GeneticAlgorithm.cc  PopulationGenerator.cc  cross_over_operator.cc  selector.cc
src/data/: coordinate.cc  individual.cc
src/manager/: IndividualManager.cc  MutationManager.cc  PopulationManager.cc
